Regression: COPY_MODE_PRIMARY got slower on DisplayLink in 42.1
COPY_MODE_PRIMARY
got slower on DisplayLink in 42.1 due to 41bfabad. egl_surface
is meant to be EGL_NO_SURFACE
on DisplayLink but we're treating it as an error now and so falling back to CPU copies. This was a necessary workaround to prevent freezes/crashes with NVIDIA GBM but doesn't really get to the root cause of that issue which needs to be fixed differently.